--- a/package.json
+++ b/package.json
@@ -33,5 +33,7 @@
     "url-loader": "^1.1.2",
     "css-loader": "^0.28.11"
   },
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.4.1"
+  }
 }
