--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
   },
   "extends": "eslint:recommended",
   "globals": {
-    "document": true
+    "document": true,
+    "Odometer": true
   }
 }
